--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -16,10 +16,11 @@ body {
 }
 
 .app {
-    padding: 30px;
+    padding: 20px;
 }
 
 .app-name {
     font-size: 28px;
     text-align: center;
+    color: palevioletred;
 }
