--- a/web/src/pages/Create/styles.module.scss
+++ b/web/src/pages/Create/styles.module.scss
@@ -1,11 +1,56 @@
 .container {
     max-width: 960px;
     margin: 20px auto 0 auto;
-    border: 1px dashed #ccc;
     min-height: 50vh;
 }
 
 .title {
     text-align: center;
     font-size: 20px;
+}
+
+.form {
+    margin-top: 30px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.description {
+    min-width: 250px;
+    padding: 5px;
+    border: 2px solid teal;
+    border-radius: 3px;
+    &:focus {
+        outline: none;
+        border: 2px solid palevioletred;
+    }
+}
+
+.file {
+    text-align: center;
+    outline: none;
+    &:focus {
+        border: 2px solid palevioletred;
+    }
+}
+
+.submitButton {
+    cursor: pointer;
+    border: 2px solid teal;
+    padding: 4px 12px;
+    background: transparent;
+
+    &:focus {
+        outline: none;
+        border: 2px solid palevioletred;
+    }
+}
+
+.feedback {
+    text-align: center;
+    min-height: 20px;
+    margin-bottom: 5px;
 }
