--- a/web/src/pages/Home/styles.module.scss
+++ b/web/src/pages/Home/styles.module.scss
@@ -1,4 +1,10 @@
 .container {
-    width: 400px;
+    display: grid;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.link {
+    text-decoration: none;
     margin: 0 auto;
 }
