--- a/web/src/pages/Create/styles.module.scss
+++ b/web/src/pages/Create/styles.module.scss
@@ -40,6 +40,7 @@
 .submitButton {
     cursor: pointer;
     border: 2px solid teal;
+    border-radius: 3px;
     padding: 4px 12px;
     background: transparent;
 
