--- a/web/src/pages/Post/styles.module.scss
+++ b/web/src/pages/Post/styles.module.scss
@@ -1,5 +1,59 @@
 .container {
     margin-top: 20px;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+@mixin button {
+    cursor: pointer;
+    border-radius: 3px;
+    padding: 5px 12px;
+    background: transparent;
+    margin-top: 10px;
+
+    &:hover,
+    &:focus {
+        outline: none;
+    }
+}
+
+.description {
+    min-width: 250px;
+    padding: 5px;
+    border: 2px solid teal;
+    border-radius: 3px;
+    margin-right: 5px;
+
+    &:focus {
+        outline: none;
+        border: 2px solid palevioletred;
+    }
+}
+
+.delete {
+    @include button;
+
+    border: 2px solid red;
+    color: red;
+    margin-right: 10px;
+
+    &:hover,
+    &:focus {
+        color: white;
+        background-color: red;
+    }
+}
+
+.edit {
+    @include button;
+
+    border: 2px solid black;
+    color: black;
+
+    &:hover,
+    &:focus {
+        color: white;
+        background-color: black;
+    }
 }
